# llmwiki-capture

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  config.example.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
capture/: __main__.py  config.py  server.py
docs/: deploy-docker.md  deploy-linux.md  deploy-macos.md  networking.md  setup-android.md  setup-ios.md
tests/: test_server.py
